.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streampets-bot
  namespace: streampets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streampets-bot
      project: streampets
  template:
    metadata:
      labels:
        app: streampets-bot
        project: streampets
      annotations:
        redeploy: "force-$(date +%s)"
    spec:
      containers:
      - name: streampets-bot-container
        image: ljheal/streampets-bot:latest
        imagePullPolicy: Always
