.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streampets-bot-service
  namespace: streampets
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: streampets-bot
