.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streampets-bot-ingress
  namespace: streampets
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
  labels:
    app: streampets-bot
    project: streampets
spec:
  ingressClassName: traefik
  rules:
  - host: bot.streampets.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streampets-bot-service
            port:
              number: 80

  tls:
  - hosts:
    - bot.streampets.io
    secretName: tls-streampets-bot
